# neftpy

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  test_debug.py
docs/: _config.yml  _toc.yml  intro.md  notebooks.ipynb  pvt.md  references.bib
docs/pvt/: fvf.ipynb  pb.ipynb  pb1.md  rs.ipynb
docs/pvt/pics/: Давление насыщения картинки.xlsx
neftpy/: curves.py  fluid.py  pipe.py  ucon.py  uconst.py  uconvert.py  upvt.py  upvt_gas.py  upvt_mixture.py  upvt_np_vect.py  upvt_oil.py  upvt_old.py  upvt_wat.py  ureservoir.py
neftpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
neftpy/old/: upvt_old.py  upvt_old2.py
notebooks/: 01_01_pvt_pb.ipynb  pvt_pb.ipynb  uPVT_ Solution_Gas_oil_ratio.ipynb  uPVT_Bubble_point_pressure.ipynb  uPVT_fluid.ipynb  uPVT_gas.ipynb  uPVT_water.ipynb  uRes_Vogel.ipynb  uconv.ipynb
notebooks/data/: Standing_Katz_Chart_Data.json
notebooks/data/Standing-Katz Chart Data/: sk_tpr_105.txt  sk_tpr_110.txt  sk_tpr_130.txt  sk_tpr_140.txt  sk_tpr_160.txt  sk_tpr_170.txt  sk_tpr_180.txt  sk_tpr_190.txt  sk_tpr_200.txt  sk_tpr_220.txt  sk_tpr_260.txt  sk_tpr_280.txt  sk_tpr_300.txt
sandbox/: arrays.ipynb  beggs_brill_gradient.ipynb  friction_factor.ipynb  pvt_test.py  pvt_test_notebook.ipynb  result.json  standing katz chart convertion code.ipynb  test_curve.py  test_debug.py  umultiphase.py  unf_pvt_oil.ipynb  unf_tests.xlsm  z_test.py  Расчет распределения давления в нагнетательной скважине.ipynb
tests/: pvt_test_generator.ipynb  upvt_gas_test.py  upvt_oil_test.py  upvt_test.py  upvt_wat_test.py
(+4 files in other folders)
