[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neftpy"
version = "0.2"
authors = [
  { name="khabibullin Rinat", email="khabibullinra@gmail.com" },
]
description = "Petroluem production engineering calculations package. Inspired by Unifloc VBA."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/unifloc/neftpy"
Issues = "https://github.com/unifloc/neftpy/issues"